# hue-mcp

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  hue_server.py  pyproject.toml
tests/: __init__.py  test_hue_server.py
